using System;
using Isu.Models;

namespace Isu.Entities
{
    public class Student : Person
    {
        public Student(string name, int id)
            : base(name, id)
        {
        }
    }
}