using Isu.Models;

namespace Isu.Entities
{
    public class Teacher : Person
    {
        public Teacher(string name, int id)
            : base(name, id)
        {
        }
    }
}