@startuml

class IsuService{
}

class GroupService{
}

class ElectiveModuleService{
}

class Schedule{
}

class MegaFaculty {
}

class EducationalProgram {
}

class ElectiveModule {
}

class Group{
}

class Student{
}

class Stream{
}

class Lesson{
}

class Teacher{
}

IsuService <-- MegaFaculty
MegaFaculty <-- ElectiveModule
MegaFaculty <-- EducationalProgram
EducationalProgram <-- GroupService
GroupService <-- Group
Group <-- Student
Group <-- Schedule
Schedule <-- Lesson

ElectiveModule <-- ElectiveModuleService
ElectiveModuleService <-- Stream
Stream <-- Lesson
Lesson <-- Teacher
@enduml